fixed card alignment

--- a/style.scss
+++ b/style.scss
@@ -12,9 +12,11 @@ $Dark-blue: hsl(218, 44%, 22%);
 
 body {
     width: 100vw; 
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: $Light-gray;
     font-family: 'Outfit';
     overflow: hidden;
@@ -27,7 +29,7 @@ body {
     text-align: center;
     width: 320px;
     height: 500px;
-    margin-top: 15%;
+    text-align: center;
     border-radius: 1em; 
     background-color: $White;
     & img {
